# me

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt
melhorenvio/: __main__.py  db.py  log.py  report.py
